--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,3 +7,4 @@
 @import "./home/header.css";
 @import "./home/dropdown-menu.css";
 @import "./home/menu-mobile.css";
+@import "./home/introducao.css";
