--- a/estilos/global/global.css
+++ b/estilos/global/global.css
@@ -22,3 +22,20 @@ img {
   display: block;
   height: auto;
 }
+
+.container{
+  padding: 50px 20px 40px 20px;
+}
+
+.btn1{
+  padding: 16px 66px;
+  background-color: blue;
+  border: none;
+  border-radius: 8px;
+  font-size: 0.95rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  background-image: linear-gradient(to bottom, #e0c292, #816E4F);
+  color: var(--cor-0);
+  cursor: pointer;
+}
