--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,3 +8,4 @@
 @import "./home/dropdown-menu.css";
 @import "./home/menu-mobile.css";
 @import "./home/introducao.css";
+@import "./home/area-atuacao.css";
