--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,3 +9,4 @@
 @import "./home/menu-mobile.css";
 @import "./home/introducao.css";
 @import "./home/area-atuacao.css";
+@import "./home/ecritorio.css";
