--- a/estilos/home/ecritorio.css
+++ b/estilos/home/ecritorio.css
@@ -2,8 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 40px;
-  height: 500px;
   align-items: center;
+  margin-bottom: 80px;
 }
 
 .escritorio-conteudo img{
