--- a/estilos/home/dropdown-menu.css
+++ b/estilos/home/dropdown-menu.css
@@ -1,6 +1,10 @@
 [data-dropdown] {
   position: relative;
 }
+[data-dropdown] div{
+  cursor: pointer;
+}
+
 
 [data-dropdown] .dropdown-menu {
   display: none;
