--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,3 +10,4 @@
 @import "./home/introducao.css";
 @import "./home/area-atuacao.css";
 @import "./home/ecritorio.css";
+@import "./home/equipe.css";
