--- a/estilos/home/equipe.css
+++ b/estilos/home/equipe.css
@@ -27,7 +27,6 @@
   border-radius: 18px;
 }
 
-
 .equipe-advg-conteudo{
   background-color: var(--cor-0);
   padding: 40px 160px;
@@ -36,7 +35,20 @@
   left: 444px;
 }
 
+.equipe-advg .grid-colum-2{
+  grid-column: 2;
+}
 
+.equipe-advg-conteudo-colum-2{
+  background-color: var(--cor-0);
+  padding: 40px 160px;
+  border-radius: 20px;
+  position: absolute;
+  right: 525px;
+}
+
+
+/* LI COLUM 1 */
 @media (max-width: 1335px){
   .equipe-advg-conteudo{
     padding: 40px 100px;
@@ -66,10 +78,50 @@
   }
 
   .equipe-advg img{
-    max-width:  400px;
+    max-width:  370px;
   }
 
   .equipe-advg-conteudo{
     position: initial;
   }
 }
+/* LI COLUM 1 */
+
+/* LI COLUM 2 */
+@media (max-width: 1335px){
+  .equipe-advg-conteudo-colum-2{
+    padding: 40px 100px;
+  }
+  
+}
+
+@media (max-width: 915px){
+  .equipe-advg-conteudo-colum-2{
+    padding: 40px 80px;
+  }
+  
+}
+
+@media (max-width: 870px){
+  .equipe-advg-conteudo-colum-2{
+    padding: 40px 40px;
+  }
+  
+}
+
+@media (max-width: 680px){
+  .equipe-advg li{
+    grid-template-columns: 1fr;
+    justify-items: normal;
+    gap: 20px 0px;
+  }
+
+  .equipe-advg img{
+    max-width:  370px;
+  }
+
+  .equipe-advg-conteudo{
+    position: initial;
+  }
+}
+/* LI COLUM 2 */
