--- a/estilos/home/equipe.css
+++ b/estilos/home/equipe.css
@@ -11,6 +11,14 @@
   font-weight: 400;
 }
 
+.equipe-conteudo .contato-pessoal{
+  display: flex;
+  align-items: center;
+}
+.equipe-conteudo .contato-pessoal img{
+  max-width: 40px;
+}
+
 .equipe-advg{
   position: relative;
 }
@@ -119,6 +127,10 @@
   .equipe-advg img{
     max-width:  370px;
   }
+
+  .equipe-advg .grid-colum-2 {
+    grid-column: 1;
+}
 
   .equipe-advg-conteudo{
     position: initial;
