--- a/estilos/home/equipe.css
+++ b/estilos/home/equipe.css
@@ -15,9 +15,15 @@
   display: flex;
   align-items: center;
   gap: 12px;
+  overflow: hidden;
 }
 .equipe-conteudo .contato-pessoal img{
   max-width: 50px;
+  transition: filter, transform 0.6s;
+}
+
+.equipe-conteudo .contato-pessoal img:hover {
+  transform: scale(1.1);
 }
 
 .equipe-conteudo .contato-pessoal a img:last-child{
