--- a/estilos/home/equipe.css
+++ b/estilos/home/equipe.css
@@ -104,11 +104,6 @@
     gap: 20px 0px;
   }
 
-  .equipe-advg img{
-    max-width:  370px;
-    margin: 0 auto;
-  }
-
   .equipe-advg-conteudo{
     position: initial;
   }
@@ -154,7 +149,8 @@
 }
 
   .equipe-advg img{
-    max-width:  370px;
+    max-width:  100%;
+    margin: 0 auto;
   }
 
   .equipe-advg .grid-colum-2 {
@@ -166,16 +162,3 @@
   }
 }
 /* LI COLUM 2 */
-
-
-@media (max-width:440px){
-  .equipe-advg img{
-    max-width:  360px;
-  }
-}
-
-@media (max-width:425px){
-  .equipe-advg img{
-    max-width:  320px;
-  }
-}
