--- a/estilos/home/contato.css
+++ b/estilos/home/contato.css
@@ -44,6 +44,14 @@
   text-align: center;
 }
 
+iframe{
+  border-radius: 4px;
+}
+
+iframe:hover{
+    box-shadow: 0px 0px 11px 2px #000;
+}
+
 .iframe-1 .icon-endereco::before {
   content: "";
   display: block;
