--- a/estilos/home/equipe.css
+++ b/estilos/home/equipe.css
@@ -1,9 +1,8 @@
-.equipe-bg{
+.equipe-bg {
   background-color: var(--cor-1);
-
 }
 
-.equipe-conteudo >h1{
+.equipe-conteudo > h1 {
   font-size: 4rem;
   text-align: center;
   text-transform: uppercase;
@@ -11,14 +10,15 @@
   font-weight: 400;
 }
 
-.equipe-conteudo .contato-pessoal{
+.equipe-conteudo .contato-pessoal {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 18px;
   overflow: hidden;
+  padding: 10px;
 }
-.equipe-conteudo .contato-pessoal img{
-  max-width: 50px;
+.equipe-conteudo .contato-pessoal img {
+  max-width: 40px;
   transition: filter, transform 0.6s;
 }
 
@@ -26,16 +26,15 @@
   transform: scale(1.1);
 }
 
-.equipe-conteudo .contato-pessoal a img:last-child{
-  max-width: 50px;
+.equipe-conteudo .contato-pessoal a img:last-child {
+  max-width: 40px;
   border-radius: 0px;
 }
 
-
-.equipe-advg{
+.equipe-advg {
   position: relative;
 }
-.equipe-advg li{
+.equipe-advg li {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
@@ -43,12 +42,12 @@
   padding-bottom: 40px;
 }
 
-.equipe-advg img{
+.equipe-advg img {
   max-width: 500px;
   border-radius: 18px;
 }
 
-.equipe-advg-conteudo{
+.equipe-advg-conteudo {
   background-color: var(--cor-0);
   padding: 40px 160px;
   border-radius: 20px;
@@ -56,11 +55,11 @@
   left: 444px;
 }
 
-.equipe-advg .grid-colum-2{
+.equipe-advg .grid-colum-2 {
   grid-column: 2;
 }
 
-.equipe-advg-conteudo-colum-2{
+.equipe-advg-conteudo-colum-2 {
   background-color: var(--cor-0);
   padding: 40px 160px;
   border-radius: 20px;
@@ -68,43 +67,39 @@
   right: 525px;
 }
 
-
 /* LI COLUM 1 */
-@media (max-width: 1335px){
-  .equipe-advg-conteudo{
+@media (max-width: 1335px) {
+  .equipe-advg-conteudo {
     padding: 40px 100px;
   }
-  
 }
 
-@media (max-width: 915px){
-  .equipe-advg-conteudo{
+@media (max-width: 915px) {
+  .equipe-advg-conteudo {
     padding: 40px 80px;
   }
-  
 }
 
-@media (max-width: 870px){
-  .equipe-advg-conteudo{
+@media (max-width: 870px) {
+  .equipe-advg-conteudo {
     padding: 40px 40px;
   }
-  
 }
 
-@media (max-width:750px){
+@media (max-width: 750px) {
   .equipe-advg-conteudo {
     left: 370px;
-}
+  }
 }
 
-@media (max-width: 680px){
-  .equipe-advg li{
+@media (max-width: 680px) {
+  .equipe-advg li {
     grid-template-columns: 1fr;
     justify-items: normal;
     gap: 20px 0px;
   }
 
-  .equipe-advg-conteudo{
+  .equipe-advg-conteudo {
     position: initial;
   }
 }
@@ -112,52 +107,50 @@
 /* LI COLUM 1 */
 
 /* LI COLUM 2 */
-@media (max-width: 1335px){
-  .equipe-advg-conteudo-colum-2{
+@media (max-width: 1335px) {
+  .equipe-advg-conteudo-colum-2 {
     padding: 40px 100px;
   }
-  
-  .equipe-advg-conteudo-colum-2{
+
+  .equipe-advg-conteudo-colum-2 {
     right: 370px;
   }
 }
 
-@media (max-width: 915px){
-  .equipe-advg-conteudo-colum-2{
+@media (max-width: 915px) {
+  .equipe-advg-conteudo-colum-2 {
     padding: 40px 80px;
   }
-  
 }
 
-@media (max-width: 870px){
-  .equipe-advg-conteudo-colum-2{
+@media (max-width: 870px) {
+  .equipe-advg-conteudo-colum-2 {
     padding: 40px 40px;
   }
-  
 }
 
-@media (max-width: 680px){
-  .equipe-advg li{
+@media (max-width: 680px) {
+  .equipe-advg li {
     grid-template-columns: 1fr;
     justify-items: normal;
     gap: 20px 0px;
   }
 
   .equipe-advg-conteudo-colum-2 {
-    position: initial; 
+    position: initial;
     grid-row: 2;
-}
+  }
 
-  .equipe-advg img{
-    max-width:  100%;
+  .equipe-advg img {
+    max-width: 100%;
     margin: 0 auto;
   }
 
   .equipe-advg .grid-colum-2 {
     grid-column: 1;
-}
+  }
 
-  .equipe-advg-conteudo{
+  .equipe-advg-conteudo {
     position: initial;
   }
 }
