--- a/estilos/home/footer.css
+++ b/estilos/home/footer.css
@@ -36,7 +36,11 @@
 
 .footer-redes img{
   max-width: 35px;
-  max-height: 35px;
+  transition: filter, transform 0.6s;
+}
+
+.footer-redes img:hover {
+  transform: scale(1.1);
 }
 
 @media (max-width:680px){
