--- a/estilos/global/global.css
+++ b/estilos/global/global.css
@@ -30,24 +30,48 @@ img {
 }
 
 .btn1{
-  padding: 16px 66px;
-  background-color: blue;
+  padding: 12px 18px;
   border: none;
   border-radius: 8px;
-  font-size: 0.95rem;
+  font-size: .83rem;
   text-transform: uppercase;
   font-weight: 600;
   background-image: linear-gradient(to bottom, #e0c292, #554935);
   color: var(--cor-0);
   cursor: pointer;
-  position:  relative;
+  position: relative;
   top: 8px;
   transition: .3s;
+  display: block;
+  margin-bottom: 20px;
 }
 
 .btn1:hover{
   top: 0px;
 }
+
+.btn2{
+  padding: 12px 18px;
+  border: none;
+  border-radius: 8px;
+  font-size: .83rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  background-image: linear-gradient(to bottom, #e0c292, #554935);
+  background-image: linear-gradient(to bottom, #e0c292, #554935);
+  color: var(--cor-0);
+  cursor: pointer;
+  position: relative;
+  top: 8px;
+  transition: .3s;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.btn2:hover{
+  top: 0px;
+}
+
 
 .orcamento{
   background-image: linear-gradient(to bottom, #e0c292, #554935);
