--- a/estilos/home/equipe.css
+++ b/estilos/home/equipe.css
@@ -10,17 +10,30 @@
   font-weight: 400;
 }
 
-.equipe-conteudo .contato-pessoal {
+.equipe-conteudo .contato-pessoal-buique {
   display: flex;
   align-items: center;
   gap: 18px;
   overflow: hidden;
   padding: 10px;
   position: relative;
+  justify-content: flex-end;
   margin-bottom: 5px;
 }
 
-.equipe-conteudo .contato-pessoal p{
+.equipe-conteudo .contato-pessoal-arcoverde {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+  overflow: hidden;
+  padding: 10px;
+  position: relative;
+  justify-content: flex-end;
+  margin-bottom: 5px;
+}
+
+.equipe-conteudo .contato-pessoal-buique p,
+.equipe-conteudo .contato-pessoal-arcoverde p{
   background-color: var(--cor-4);
   border-radius: 8px;
   padding: 10px;
@@ -28,16 +41,19 @@
   font-size: 1rem;
 }
 
-.equipe-conteudo .contato-pessoal img {
+.equipe-conteudo .contato-pessoal-buique img,
+.equipe-conteudo .contato-pessoal-arcoverde img {
   max-width: 40px;
   transition: filter, transform 0.6s;
 }
 
-.equipe-conteudo .contato-pessoal img:hover {
+.equipe-conteudo .contato-pessoal-buique img:hover,
+.equipe-conteudo .contato-pessoal-arcoverde img:hover {
   transform: scale(1.1);
 }
 
-.equipe-conteudo .contato-pessoal a img:last-child {
+.equipe-conteudo .contato-pessoal-buique a img:last-child, 
+.equipe-conteudo .contato-pessoal-arcoverde a img:last-child{
   max-width: 40px;
   border-radius: 0px;
 }
@@ -82,6 +98,12 @@
 @media (max-width: 1335px) {
   .equipe-advg-conteudo {
     padding: 40px 100px;
+  }
+}
+
+@media (max-width: 990px) {
+  .equipe-advg-conteudo {
+      padding: 40px 100px;
   }
 }
 
