--- a/estilos/home/equipe.css
+++ b/estilos/home/equipe.css
@@ -101,27 +101,33 @@
   }
 }
 
-@media (max-width: 990px) {
+@media (max-width: 1010px) {
   .equipe-advg-conteudo {
-      padding: 40px 100px;
+      padding: 40px 45px;
   }
 }
 
 @media (max-width: 915px) {
   .equipe-advg-conteudo {
-    padding: 40px 80px;
+    padding: 40px 30px;
   }
 }
 
 @media (max-width: 870px) {
   .equipe-advg-conteudo {
-    padding: 40px 40px;
+    padding: 40px 25px;
+  }
+}
+
+@media (max-width: 850px){
+  .equipe-advg-conteudo {
+    left: 370px;
   }
 }
 
 @media (max-width: 750px) {
   .equipe-advg-conteudo {
-    left: 370px;
+    left: 310px;
   }
 }
 
@@ -147,6 +153,12 @@
 
   .equipe-advg-conteudo-colum-2 {
     right: 370px;
+  }
+}
+
+@media (max-width:800px){
+  .equipe-advg-conteudo-colum-2 {
+    right: 258px;
   }
 }
 
