--- a/estilos/home/footer.css
+++ b/estilos/home/footer.css
@@ -53,7 +53,7 @@
 }
 
 .footer-atendimento p{
-  
+  font-size: 0.925rem;
 }
 
 .footer-creditos{
@@ -67,6 +67,7 @@
       padding-bottom: 75px;
   }
 }
+
 
 @media (max-width:680px){
   .footer-conteudo{
