--- a/estilos/home/footer.css
+++ b/estilos/home/footer.css
@@ -56,7 +56,7 @@
   font-size: 0.925rem;
 }
 
-.footer-creditos{
+.footer-creditos p{
   font-size: 0.85rem;
   text-align: center;
   padding-bottom: 20px;
