--- a/estilos/home/introducao.css
+++ b/estilos/home/introducao.css
@@ -29,7 +29,7 @@
 
 @media (max-width: 700px){
   .introducao-bg{
-    background-position: center right;
+    background-position: center center;
   }
 
   .introducao-conteudo{
