--- a/estilos/home/introducao.css
+++ b/estilos/home/introducao.css
@@ -1,5 +1,5 @@
 .introducao-bg {
-  background: url(../../images/teste-4.jpg);
+  background: url(../../images/imagem-introdocao2.jpg);
   background-position: center top;
   background-size: cover;
 
