--- a/estilos/home/footer.css
+++ b/estilos/home/footer.css
@@ -6,7 +6,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding-bottom: 80px;
-  align-items: center;
   justify-content: space-around;
 }
 
@@ -14,13 +13,11 @@
   max-width: 220px;
 }
 
-.footer-contato{
-}
 
 .footer-contato h1{
   text-transform: uppercase;
-  font-weight: 500;
-  letter-spacing: 1.2px;
+  font-weight: 600;
+  letter-spacing: 1.1px;
   font-size: 1.2em;
   margin-bottom: 5px;
 }
@@ -30,26 +27,23 @@
   margin-bottom: 10px;
 }
 
-.footer-redes{
-  display: flex;
-  gap: 20px;
-}
-
-.footer-redes img{
-  max-width: 35px;
-  transition: filter, transform 0.6s;
-}
-
-.footer-redes img:hover {
-  transform: scale(1.1);
-}
-
 .footer-atendimento h1{
   text-transform: uppercase;
-  font-weight: 500;
-  letter-spacing: 1.2px;
+  font-weight: 600;
+  letter-spacing: 1.1px;
   font-size: 1.2em;
   margin-bottom: 5px;
+}
+
+.footer-atendimento .funcionamento{
+  font-size: 1.085rem;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+
+.footer-atendimento .cidade{
+  font-size: .985rem;
+  font-weight: 500;
 }
 
 .footer-atendimento p{
