--- a/estilos/home/faq.css
+++ b/estilos/home/faq.css
@@ -20,7 +20,6 @@
   font-size: 1.3rem;
   font-weight: 600;
   padding: 12px;
-  margin-bottom: 10px;
   cursor: pointer;
   border-top: .5px solid #e1dada6c;
 
@@ -35,10 +34,19 @@
   display: none;
 }
 
+.dt-pergunta.active{
+  background-image: linear-gradient(to right, #393939, #2e2a2a, #a19a8c);
+  color: #d7d7d7;;
+}
+
+.dt-pergunta:hover{
+  background-image: linear-gradient(to right, #393939, #2e2a2a, #a19a8c);
+}
+
 .dd-resposta.active{
   display: block;
   padding: 24px;
-
+  background-color: #e7d4b4;
 }
 
 .faq-lista dt::before {
