--- a/estilos/home/footer.css
+++ b/estilos/home/footer.css
@@ -61,6 +61,10 @@
   padding-bottom: 20px;
 }
 
+.footer-credito:hover{
+  color: rgba(226, 34, 34, 0.884);
+}
+
 @media (max-width: 680px) {
   .footer-creditos {
       padding-bottom: 75px;
