--- a/estilos/home/ecritorio.css
+++ b/estilos/home/ecritorio.css
@@ -12,6 +12,7 @@
 .escritorio-carrosel{
   filter: drop-shadow(0px 0px 10px #000);
   overflow: hidden;
+  max-height: 900px;
   margin: 0 auto;
   padding-top: 60px;
   border-radius: 12px;
@@ -44,7 +45,7 @@
 }
 
 
-@media (max-width:680px){
+@media (max-width:1000px){
   .escritorio-conteudo{
     grid-template-columns: 1fr;
   }
