--- a/estilos/home/introducao.css
+++ b/estilos/home/introducao.css
@@ -1,5 +1,5 @@
 .introducao-bg {
-  background: url(../../images/teste-introducao2.jpeg);
+  background: url(../../images/teste-introducao2.jpega);
   background-position: center top;
   background-size: cover;
   
